--- a/src/libGLESv2/libGLESv2_winrt.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_winrt.vcxproj.filters
@@ -176,6 +176,9 @@
     <ClCompile Include="renderer\IndexRangeCache.cpp">
       <Filter>Header Files\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\event_tracer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryStream.h">
