--- a/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
+++ b/src/libGLESv2/libGLESv2_winrt_2013.vcxproj.filters
@@ -176,6 +176,9 @@
     <ClCompile Include="renderer\IndexRangeCache.cpp">
       <Filter>Source Files\Renderer11</Filter>
     </ClCompile>
+    <ClCompile Include="..\common\event_tracer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BinaryStream.h">
