--- a/samples/angle/Simple_Instancing/Simple_Instancing_winrt/Simple_Instancing_winrt_2013.vcxproj
+++ b/samples/angle/Simple_Instancing/Simple_Instancing_winrt/Simple_Instancing_winrt_2013.vcxproj
@@ -102,7 +102,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <PrecompiledHeaderOutputFile>$(IntDir)pch.pch</PrecompiledHeaderOutputFile>
       <AdditionalIncludeDirectories>../../../gles2_book/Common;../../../../include;$(ProjectDir);$(IntermediateOutputPath);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <DisableSpecificWarnings>4451;4453</DisableSpecificWarnings>
+      <DisableSpecificWarnings>4451;4453;4973</DisableSpecificWarnings>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)'=='Release'">
